--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "bootstrap": "~3.3.5"
   },
   "devDependencies": {
-    "bower": "^1.3.8",
+    "bower": "^1.8.2",
     "canonical-path": "0.0.2",
     "coveralls": "^2.11.1",
     "cz-conventional-changelog": "^1.1.5",
-    "grunt": "~0.4",
+    "grunt": "^0.4.5",
     "grunt-angular-templates": "~0.5",
     "grunt-bump": "^0.7.0",
     "grunt-contrib-clean": "~0.5",
@@ -57,17 +57,17 @@
     "grunt-newer": "~1.1.0",
     "grunt-ngdocs": "https://github.com/c0bra/grunt-ngdocs/tarball/0.2.7-custom3",
     "grunt-protractor-runner": "4.0.0",
-    "grunt-shell-spawn": "~0.3.0",
+    "grunt-shell-spawn": "^0.3.10",
     "husky": "^0.13.2",
     "jit-grunt": "^0.8.0",
     "jshint-stylish": "^0.2.0",
-    "karma": "~0.12",
-    "karma-chrome-launcher": "~0.1",
+    "karma": "^0.12.37",
+    "karma-chrome-launcher": "^0.1.12",
     "karma-coverage": "^0.2.5",
     "karma-firefox-launcher": "~0.1",
     "karma-ie-launcher": "^0.1.5",
     "karma-jasmine": "^0.3.7",
-    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-phantomjs-launcher": "^1.0.4",
     "karma-requirejs": "~0.2",
     "karma-sauce-launcher": "^1.0.0",
     "karma-script-launcher": "~0.1",
@@ -77,10 +77,10 @@
     "protractor": "~4.0.14",
     "protractor-accessibility-plugin": "^0.3.0",
     "requirejs": "^2.3.3",
-    "selenium-server-standalone-jar": "2.45.0",
-    "selenium-webdriver": "~2.53.0",
-    "semver": "~2.2.1",
-    "shelljs": "~0.2.6",
+    "selenium-server-standalone-jar": "^2.45.0",
+    "selenium-webdriver": "^2.53.3",
+    "semver": "^2.2.1",
+    "shelljs": "^0.2.6",
     "time-grunt": "~1.1.0",
     "validate-commit-message": "^3.0.1"
   },
