--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "directories": {
     "test": "test"
   },
-  "main": "index.js",
+  "main": "dist/release/index.js",
   "scripts": {
     "init": "validate-commit-msg",
     "test": "grunt",
